@@ -32,7 +32,7 @@ bool ShmemOutputStream::open(int port,int size)
 	sprintf(obj_name,"%sSHMEM_FILE_%d_0",temp_dir_path,port);
 
 	m_pMap=new ACE_Shared_Memory_MM(obj_name, //const ACE_TCHAR *filename,
-		size+sizeof ShmemHeader_t, //int len = -1,
+		size+sizeof(ShmemHeader_t), //int len = -1,
 		O_RDWR | O_CREAT, //int flags = O_RDWR | O_CREAT,
 		ACE_DEFAULT_FILE_PERMS, //int mode = ACE_DEFAULT_FILE_PERMS,
 		PROT_RDWR, //int prot = PROT_RDWR,
@@ -97,7 +97,7 @@ bool ShmemOutputStream::Resize(int newsize)
 	sprintf(file_name,"%sSHMEM_FILE_%d_%d",file_path,m_Port,m_ResizeNum);
 
 	pNewMap=new ACE_Shared_Memory_MM(file_name, //const ACE_TCHAR *filename,
-		newsize+sizeof ShmemHeader_t, //int len = -1,
+		newsize+sizeof(ShmemHeader_t), //int len = -1,
 		O_RDWR | O_CREAT, //int flags = O_RDWR | O_CREAT,
 		ACE_DEFAULT_FILE_PERMS, //int mode = ACE_DEFAULT_FILE_PERMS,
 		PROT_RDWR, //int prot = PROT_RDWR,
